<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/main_activity_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="me.bitfrom.githubsearch.ui.main.MainActivity">

        <me.bitfrom.githubsearch.ui.custom.CustomProgressBar
            android:id="@+id/searching_pb"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

        <EditText
            android:id="@+id/search_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/searching_pb"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/enter_your_query_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/search_repositories_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/searching_pb"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/search_et"
            android:layout_toRightOf="@id/search_et"
            android:text="@string/search_start_btn"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/stop_search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/searching_pb"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/search_repositories_btn"
            android:layout_toRightOf="@id/search_repositories_btn"
            android:text="@string/search_stop_btn"
            tools:ignore="RtlHardcoded" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/repositories_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_et"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:overScrollMode="never" />

        <TextView
            android:id="@+id/empty_repository_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/empty_repository_list"
            android:visibility="gone" />
    </RelativeLayout>
</layout>
