<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/repository_item_root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rep_item_name_lbl"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:linksClickable="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/language_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/language_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rep_item_language_lbl"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:linksClickable="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/description_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/description_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rep_item_description"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/meta_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/stars_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/stars_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rep_item_stars"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/forks_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forks_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rep_item_forks"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/forks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/owner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/owner_name_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rep_item_owner_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/owner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</layout>